--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "homepage": "https://github.com/thangngoc89/react-howler#readme",
   "dependencies": {
-    "howler": "git+https://github.com/goldfire/howler.js.git#v2.0.0-beta7"
+    "howler": "git+https://github.com/goldfire/howler.js.git#v2.0.0-beta7",
+    "rimraf": "^2.5.2"
   },
   "peerDependencies": {
     "react": ">=0.14.0",
